After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598263 - refcount leak in resindvd
refcount leak in resindvd
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 0.10.15
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-13 12:41 UTC by Jan Schmidt
Modified: 2009-10-13 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
resindvd: Don't leak a reference to the parent in rsnaudiomunge (818 bytes, patch)
2009-10-13 13:14 UTC, Jan Schmidt
committed Details | Review

Description Jan Schmidt 2009-10-13 12:41:48 UTC
The rsnaudiomunge element in resin leaks a refcount on the sink pad in event handling.
Comment 1 Jan Schmidt 2009-10-13 13:14:45 UTC
Created attachment 145349 [details] [review]
resindvd: Don't leak a reference to the parent in rsnaudiomunge

Don't leak a reference to the pad parent in the sink pad event handler
in rsnaudiomunge.
Comment 2 Sebastian Dröge (slomo) 2009-10-13 13:27:30 UTC
Review of attachment 145349 [details] [review]:

That patch is obviously correct :)
Comment 3 Jan Schmidt 2009-10-13 14:14:02 UTC
commit 30845f1118d8248414e6c02a59b3fc020b53b206
Author: Jan Schmidt <thaytan@noraisin.net>
Date:   Tue Oct 13 13:05:50 2009 +0100

    resindvd: Don't leak a reference to the parent in rsnaudiomunge
    
    Don't leak a reference to the pad parent in the sink pad event handler
    in rsnaudiomunge.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=598263