resindvd: Don't leak a reference to the parent in rsnaudiomunge

Don't leak a reference to the pad parent in the sink pad event handler
in rsnaudiomunge.

https://bugzilla.gnome.org/show_bug.cgi?id=598263